# pkg/api/api.gen.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.7.0 DO NOT EDIT.
 package api
 
 // Defines values for ActionType.
@@ -37,7 +37,8 @@ const (
 
 // Balances account
 type Account struct {
-	Id string `json:"id"`
+	Balances *BalanceList `json:"balances,omitempty"`
+	Id       string       `json:"id"`
 }
 
 // Action type: * `BUY` - use base currency to buy target currency * `SELL` - sell target currency for base currency
@@ -45,6 +46,9 @@ type ActionType string
 
 // BalanceItem defines model for BalanceItem.
 type BalanceItem struct {
+
+	// Address hash for funding this balance
+	Funding  string        `json:"funding"`
 	Quantity CurrencyValue `json:"quantity"`
 
 	// Symbol Type: * `BTC` - bitcoin currency identifier * `ETH` - ethereum currency identifier
@@ -68,22 +72,8 @@ type BookOrder struct {
 // BookOrderList defines model for BookOrderList.
 type BookOrderList []BookOrder
 
-// CallbackResponse defines model for CallbackResponse.
-type CallbackResponse struct {
-	Message string `json:"message"`
-}
-
 // CurrencyValue defines model for CurrencyValue.
 type CurrencyValue string
-
-// FundingCallback defines model for FundingCallback.
-type FundingCallback struct {
-	Account  string        `json:"account"`
-	Quantity CurrencyValue `json:"quantity"`
-
-	// Symbol Type: * `BTC` - bitcoin currency identifier * `ETH` - ethereum currency identifier
-	Symbol SymbolType `json:"symbol"`
-}
 
 // LimitOrderRequest defines model for LimitOrderRequest.
 type LimitOrderRequest struct {
@@ -155,11 +145,5 @@ type OrderPathParam string
 // PostApiAccountAccountIDOrderJSONBody defines parameters for PostApiAccountAccountIDOrder.
 type PostApiAccountAccountIDOrderJSONBody OrderRequest
 
-// PostWebhookFundingJSONBody defines parameters for PostWebhookFunding.
-type PostWebhookFundingJSONBody FundingCallback
-
 // PostApiAccountAccountIDOrderJSONRequestBody defines body for PostApiAccountAccountIDOrder for application/json ContentType.
 type PostApiAccountAccountIDOrderJSONRequestBody PostApiAccountAccountIDOrderJSONBody
-
-// PostWebhookFundingJSONRequestBody defines body for PostWebhookFunding for application/json ContentType.
-type PostWebhookFundingJSONRequestBody PostWebhookFundingJSONBody
